# ndt

./: 404.html  CHANGELOG.md  README.md  SECURITY.md  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: Codeql.yml  codeql.yml  docs.yml  publish.yml  scorecard.yml  tests.yml
CONTRIBUTING/: index.html
api/: index.html
api/SUMMARY/: index.html
api/ndt/: index.html
api/ndt/analysis/: index.html
api/ndt/analysis/activation_analysis/: index.html
api/ndt/analysis/feature_visualization/: index.html
api/ndt/architectures/: index.html
api/ndt/architectures/base/: index.html
api/ndt/architectures/cnn/: index.html
api/ndt/architectures/mlp/: index.html
api/ndt/architectures/registry/: index.html
api/ndt/architectures/transformer/: index.html
api/ndt/architectures/vit/: index.html
api/ndt/core/: index.html
api/ndt/core/estimators/: index.html
api/ndt/core/hooks/: index.html
api/ndt/core/jump_detector/: index.html
api/ndt/core/tracker/: index.html
api/ndt/export/: index.html
api/ndt/export/csv/: index.html
api/ndt/export/hdf5/: index.html
api/ndt/export/json/: index.html
api/ndt/utils/: index.html
api/ndt/utils/config/: index.html
api/ndt/utils/logging/: index.html
api/ndt/validity/: index.html
api/ndt/validity/fixtures/: index.html
api/ndt/validity/harness/: index.html
api/ndt/visualization/: index.html
api/ndt/visualization/plots/: index.html
concepts/how-it-works/: index.html
examples/: 01_quickstart_mnist.py  02_cnn_cifar10.py  03_reproduce_tds_experiment.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/architecture_support/: index.html
guides/examples_gallery/: index.html
guides/tds_reproduction/: index.html
reference/performance_benchmarks/: index.html
reference/troubleshooting/: index.html
search/: search_index.json
src/ndt/architectures/: cnn.py  registry.py
src/ndt/core/: estimators.py
src/ndt/export/: json.py
src/ndt/utils/: config.py
src/ndt/validity/: fixtures.py  harness.py
src/ndt/visualization/: interactive.py  plots.py
tests/: test_examples.py
(+1 files in other folders)
